# diff-utils

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pixi.toml
.cursor/rules/: generate-demo-video.mdc  keep-docs-updated.mdc
.github/workflows/: ci.yml
demo/: diff-demo.tape  key-hints.ass  render-demo.sh
demo/project-a/: utils.py
diff-tool/: Cargo.toml
diff-tool-core/: Cargo.toml
diff-tool-core/src/: diff.rs  file_browser.rs  lib.rs  path_display.rs
diff-tool/src/: app.rs  main.rs  terminal.rs  theme.rs  ui.rs
diff-utils/: Cargo.toml
diff-utils-core/: Cargo.toml
diff-utils-core/src/: diff.rs  file_browser.rs  lib.rs
diff-utils/src/: app.rs  highlight.rs  main.rs  terminal.rs  theme.rs  ui.rs
docs/: README.md  architecture.md  engineering-decisions.md  goals-and-limitations.md  tech-stack.md
recipe/: recipe.yaml
scripts/: update-version.sh
