[package]
name = "diff-tool-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Side-by-side diff computation and file browser model for diff-tool"

[dependencies]
similar = { version = "2", features = ["text"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
