[package]
name = "diff-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Side-by-side file diff TUI"

[[bin]]
name = "diff-tool"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
diff-tool-core = { path = "../diff-tool-core" }
ratatui = "0.29"
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "metadata", "dump-load", "regex-fancy", "yaml-load"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
