[package]
name = "diff-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Side-by-side file diff TUI"

[[bin]]
name = "diff-utils"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
diff-utils-core = { path = "../diff-utils-core" }
ratatui = "0.29"
